WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82191
Web Inspector: [REGRESSION] Workarounds for security checks when retrieving stylesheet rule lists are broken
https://bugs.webkit.org/show_bug.cgi?id=82191
Summary
Web Inspector: [REGRESSION] Workarounds for security checks when retrieving s...
Alexander Pavlov (apavlov)
Reported
2012-03-26 04:52:25 PDT
This is a regression from
http://trac.webkit.org/changeset/112037
Attachments
Patch
(7.98 KB, patch)
2012-03-26 05:57 PDT
,
Alexander Pavlov (apavlov)
vsevik
: review+
apavlov
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-03-26 05:57:36 PDT
Created
attachment 133786
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2012-03-26 06:07:39 PDT
Committed
r112083
: <
http://trac.webkit.org/changeset/112083
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug