Web Inspector: [REGRESSION] Workarounds for security checks when retrieving stylesheet rule lists are broken https://bugs.webkit.org/show_bug.cgi?id=82191

Reviewed by Vsevolod Vlasov.

Source/WebCore:

Test: http/tests/inspector/modify-cross-domain-rule.html

* inspector/InspectorStyleSheet.cpp:
(WebCore::asCSSRuleList):
(WebCore::InspectorStyleSheet::buildObjectForStyleSheet):

LayoutTests:

* http/tests/inspector/modify-cross-domain-rule-expected.txt: Added.
* http/tests/inspector/modify-cross-domain-rule.html: Added.
* http/tests/inspector/styles/modify-cross-domain-rule.css: Added.
(#inspected):

Canonical link: https://commits.webkit.org/99526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112083 268f45cc-cd09-0410-ab3c-d52691b4dbfc